<resources>
    <string name="app_name">Complain Admin App</string>
    <string name="complain_title">Complain Title</string>
    <string name="user_name">User Name</string>
    <string name="notice_title">Notice title</string>
    <string name="notice_description">Notice description</string>
    <string name="notice_image">Notice Image</string>
    <string name="publish">Publish</string>
    <dimen name="head_line_text">22sp</dimen>
    <dimen name="normal_text">20sp</dimen>
    <dimen name="small_text">16sp</dimen>

    <dimen name="inner_pad">5sp</dimen>
    <dimen name="message_pad">3sp</dimen>
</resources>