<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoticeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" >

        <TextView
            android:id="@+id/userNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="New Notice"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:padding="5dp" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/moreBtn"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginEnd="5dp"
            android:padding="5dp"
            android:src="@drawable/ic_more"
            app:tint="@color/white"
            android:layout_gravity="end"
            android:contentDescription="@string/app_name" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notice_title"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:padding="5dp"/>

            <EditText
                android:id="@+id/noticeTitleEt"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/notice_title"
                android:maxLines="1"
                android:inputType="text"
                android:textSize="16sp"
                android:padding="10dp"
                android:autofillHints="full name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notice_description"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:padding="5dp"/>

            <EditText
                android:id="@+id/noticeDescEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_style"
                android:hint="@string/notice_description"
                android:gravity="start"
                android:minHeight="160dp"
                android:maxHeight="180dp"
                android:inputType="textMultiLine"
                android:textSize="16sp"
                android:padding="10dp"
                android:autofillHints="full name" />

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notice_image"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginBottom="5dp"
                android:padding="5dp"/>

            <ImageView
                android:id="@+id/noticeImageIv"
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/edit_text_style"
                android:padding="5dp"
                android:src="@drawable/ic_image_loading"
                android:contentDescription="@string/app_name" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/publish"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/round_back_primary"
        android:layout_marginTop="10dp" />

</RelativeLayout>